<resources>
    <string name="app_name">MyClip</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_3_text">Tab 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Channel Name</string>
    <string name="sign_in">Sign in</string>
    <string name="user_id">User id</string>
    <string name="channels">Channels</string>
    <string name="hashtags">Hashtags</string>
    <string name="upload">Upload</string>
    <string name="subscribe">Subscribe</string>
    <string name="subsriptions">Subsriptions</string>
    <string name="search">Search</string>
</resources>